--- a/web/src/styles/index.css
+++ b/web/src/styles/index.css
@@ -6,6 +6,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     background: #3b3d42;
     color: #a9a9b3;
+    word-wrap: break-word
 }
 
 a {
